<resources>
    <string name="app_name">NasaProjetoIntegrador</string>
    <string name="nome_app">Pequeno Explorador</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="descricao_login">Entre com sua senha ou realize seu cadastro.</string>
    <string name="cabecalho_login">Olá Seja Bem-Vindo!!</string>
    <string name="cadastro_descricao">Realize seu cadastro e começe a explorar o nosso universo!!</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="senha">Senha</string>
    <string name="confirma_senha">Confirma Senha</string>
    <string name="descricao_google_cadastro">Entre com a sua conta Google para realizar o seu cadastro e começar a explorar o nosso Universo!!</string>
    <string name="cadastro_facebook_conta">Entre com a sua conta Facebook para realizar o seu cadastro e começar a explorar o nosso Universo!!</string>
    <string name="descricao_solar">O Sistema Solar é um conjunto de corpos celestes que giram em torno de um sol (uma estrela).</string>
    <string name="descricao_solar2">O nosso sistema solar é formado por oito planetas: Mercúrio, Vênus, Terra, Marte, Júpiter, Saturno, Urano e Netuno.</string>
    <string name="marte_decricao">Marte é o quarto planeta a partir do Sol, o segundo menor do Sistema Solar. Batizado em homenagem ao deus romano da guerra, muitas vezes é descrito como o Planeta Vermelho, porque o óxido de ferro predominante em sua superfície lhe dá uma aparência avermelhada.</string>
    <string name="venus_curiosidade">O planeta mais quente não é o mais próximo do Sol Apesar de muitos pensarem que é Mercúrio, na verdade é Vênus. A explicação é por ele possuir uma atmosfera muito mais densa. Em Vênus a atmosfera é muito compacta, formada por uma enorme quantidade de gás carbônico, por ser muito densa desenvolve um elevado efeito estufa que faz o planeta produzir altíssimas temperaturas. Onde os raios solares incidem de forma perpendicular na superfície do planeta as temperaturas atingem até 460ºC.</string>
    <string name="descricao_detalhe_imagem">Os anéis de Saturno são compostos principalmente de partículas de gelo que variam de poeira microscópica e grandes pedregulhos.</string>

    <string name="facebook_app_id">732755544805236</string>
    <string name="facebook_client_token">84b49535e773b819818998c43fe070bd</string>

    <!-- Strings used Shared Preferences -->
    <string name="sharedpref">sharedpref_nasa</string>
    <string name="contact_fav_key">contact_fav_key_%1$d</string>
    <string name="tamanho_planetas">A imagem mostra os diferentes Tamanho dos Planetas, a Terra não é tão grande assim, perto dos gigantes que formam o Sistema Solar, o nosso planeta aparece na quinta posição entre as maiores, que é liderada por Júpiter</string>
    <string name="rotation">A imagem acima mostra o movimento de Rotação do Planeta Terra em torno do Sol</string>
    <string name="rovers">Continue sua exploração! Conheça os Rovers de Marte!</string>
    <string name="luas_saturno">Saturno é o planeta com o maior número de luas do Sistema Solar, possuindo 82 luas no total.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>